--- a/scripts/ERA5DataClean.Rmd
+++ b/scripts/ERA5DataClean.Rmd
@@ -14,9 +14,9 @@ rm(list=ls())
 
 # Overview
 
-ERA 5 data from google earth engine
+Take extracted ERA 5 data from google earth engine...
 
-
+ERA5 data was extract by year
 # Packages
 
 ```{r}
