--- a/scripts/FigureMeasurePredictTemperature.Rmd
+++ b/scripts/FigureMeasurePredictTemperature.Rmd
@@ -139,7 +139,7 @@ theme(axis.title = element_text( angle = 90, color="red", size=15, face=3))
           scale_color_manual(name="", values = c( "grey79", "black")) +
 
     
-    xlab("Julian date") +
+    xlab("Day of year") +
     
   theme_light() +
     theme(legend.position = "none", plot.margin = margin(t=5, b=0, r=20, l=5, "mm")) +  
@@ -220,7 +220,7 @@ df2 <- data.frame(type2, depth2, dayJ2)
           scale_color_manual(name="", values = c( "grey79", "black")) +
 
     
-    xlab("Julian date") +
+    xlab("Day of year") +
     
   theme_light() +
     theme(legend.position = "none", plot.margin = margin(t=5, b=0, r=20, l=5, "mm")) +  
@@ -250,7 +250,7 @@ df2 <- data.frame(type2, depth2, dayJ2)
           scale_color_manual(name="", values = c( "grey79", "black")) +
 
     
-    xlab("Julian date") +
+    xlab("Day of year") +
     
   theme_light() +
     theme(legend.position = "right", 
